--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# csv files.
+ratings.csv
+movies_metadata.csv
+credits.csv
+keywords.csv
+links.csv
+links_small.csv
+ratings_small.csv
+wikipedia-movies.json
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
