Adding config.py file

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ links_small.csv
 ratings_small.csv
 wikipedia-movies.json
 
+# config file
+config.py
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
